@startuml
class Rubiks_ {
    - Panel panel
    - int previousID
    {static} - Frame instance
    ~ String[] choices

    ~ void addButton(String label, int index)
    + void actionPerformed(ActionEvent e)
    + void processWindowEvent(WindowEvent e)
}
class Runner {
    - String command
    - ImagePlus imp
    ~Runner(String command, ImagePlus imp)
    + void run()
    ~ void runCommand(String command, ImagePlus imp)

}
class GreyRubiks {
    + _Rubiks(ImageJ imp, ImageProcessor ip)
    + void encrypt()
    + void decrypt()

}
class RGBRubiks {
    + _Rubiks(ImageJ imp, ImageProcessor ip)
    + void encrypt()
    + void decrypt()

}
abstract class Rubiks {
    {abstract} + void encrypt()
    {abstract} + void decrypt()
}
interface ActionListener
class PlugInFrame
class Thread


RGBRubiks --|> GreyRubiks  : extends
RGBRubiks --* Rubiks_ : contains

GreyRubiks --* Rubiks_ : contains
GreyRubiks --|> Rubiks : extends

Rubiks_ --|> PlugInFrame : extends
Rubiks_ --|> ActionListener

Runner --+ Rubiks_ : innerclass
Runner --|> Thread : extends

hide empty members
@enduml